/*
 * $Id: ChangeLog,v 1.5161 2006/09/22 18:53:25 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2006-09-22 15:00 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * contrib/rdd_ads/ads1.c
    * Missing type casts

2006-09-22 14:50 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
  * source/vm/classes.c
    * Corrected sdilly typo in __cls_CntMethods()

2006-09-21 10:26 UTC-0800 Brian Hays <bhays at abacuslaw.com>
  * include/hbextern.ch
    * fixed location and slashes for ads.ch and adsexternal.ch

2006-09-21 11:10 UTC-0300 Eduardo Fernandes <modalsist@yahoo.com.br>
  * source\rtl\memoedit.prg
    ! fixed bound error with ntop,nleft,nbottom,nright coordinates.
      Bug reported by Nick Van Dyck.
  * source\rtl\teditor.prg
    ! fixed bound error with ntop,nleft,nbottom,nright coordinates.
    ! fixed ::settextselection() method for column selection with
      shift-right/shift-left keys. Thanks to Lorenzo Fiorini.

2006-09-19 14:12 UTC-0800 Brian Hays <bhays at abacuslaw.com>
  + contrib/rdd_ads/adsexternal.ch

2006-09-19 13:48 UTC-0800 Brian Hays <bhays at abacuslaw.com>
  * contrib/rdd_ads/ads1.c
    * fixed ADT creation bug with > 450 fields

  * include/hbextern.ch
    * added support for ifdef ADS to load adsexternal.ch (for xbscript)

  + utils/xbscript/bld_ads.bat
    * to build xbscript with ADS linked in

  * utils/xbscript/xbscript.prg

    * Changed HELP display to show XBSCRIPT instead of "PP"
        also added -S description
    * added support for ifdef ADS to load those rdds
    ! added -S switch to stay in DOT prompt mode after executing code

      This is a pretty cool feature. You can set up a batch file
      to call xbscript MyStartupStuff.prg -S
      and set default rdd to whatever, load lots of databases with
      relations into different workareas, and have the entire