@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.5161 2006/09/22 18:53:25 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.5162 2006/09/22 19:02:22 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2006-09-22 15:02 UTC-0800 Brian Hays <bhays at abacuslaw.com>
+  * contrib/rdd_ads/adsfunc.c
+    * fixed AdsDDSetDatabaseProperty arg list and buffer sizing
+      (bug was failure in setting new admin password)
+  * tests/datad.prg
+    * added test for above
 
 2006-09-22 15:00 UTC-0500 Ron Pinkas <ron/at/xharbour.com>
   * contrib/rdd_ads/ads1.c
